--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: default
 
   
 
-	<p class="rss-subscribe">HAHAHA <a href="{{ "/feed.xml" | prepend: site.baseurl }}">JOKES!</a></p>
+	<p class="rss-subscribe">HAHAHAHAHHAH <a href="{{ "/feed.xml" | prepend: site.baseurl }}">JOKES! JOKES AGAIN!</a></p>
 
 
 </div>
